--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Liquid Logo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: #000;
-      overflow: hidden;
+      background-color: #000;
       height: 100%;
+      width: 100%;
+      overflow: hidden;
     }
-
     canvas {
       display: block;
       width: 100vw;
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <canvas id="logo-canvas"></canvas>
-  <script src="main.js"></script>
+  <canvas id="shader-canvas"></canvas>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
